Mostly through transitioning to ui-router, also changed route URLs a bit

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
       </div>
     </nav>
     <div class="container-fluid">
-      <div class="view-animate" ng-view></div>
+      <div class="view-animate" ui-view></div>
     </div>
 
     <!-- build:js(.) scripts/vendor.js -->
