Changed to tab layout, fixed a lot of things

--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,8 @@
         <script src="scripts/services/practicescollection.js"></script>
         <script src="scripts/services/searchmodel.js"></script>
         <script src="scripts/Polyline.encoded.js"></script>
+        <script src="scripts/ui-bootstrap-custom-0.12.1.min.js"></script>
+        <script src="scripts/ui-bootstrap-custom-tpls-0.12.1.min.js"></script>
         <!-- endbuild -->
 </body>
 </html>
