--- a/app/index.html
+++ b/app/index.html
@@ -91,9 +91,9 @@
         <script src="scripts/controllers/map.js"></script>
         <script src="scripts/services/practicescollection.js"></script>
         <script src="scripts/services/searchmodel.js"></script>
-        <script src="scripts/Polyline.encoded.js"></script>
-        <script src="scripts/ui-bootstrap-custom-0.12.1.min.js"></script>
-        <script src="scripts/ui-bootstrap-custom-tpls-0.12.1.min.js"></script>
+        <script src="scripts-thirdparty/Polyline.encoded.js"></script>
+        <script src="scripts-thirdparty/ui-bootstrap-custom-0.12.1.min.js"></script>
+        <script src="scripts-thirdparty/ui-bootstrap-custom-tpls-0.12.1.min.js"></script>
         <!-- endbuild -->
 </body>
 </html>
