Loading gmaps from https

--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=false"></script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=false"></script>
     
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
