--- a/app/index.html
+++ b/app/index.html
@@ -27,18 +27,18 @@
     <nav class="navbar navbar-default navbar-static-top" ng-controller="NavbarCtrl">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-brand-centred">
+          <a role="button" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-brand-centred">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
+          </a>
           <a class="navbar-brand navbar-brand-centred" href="#/">DoctorPricer</a>
+          <ul class="nav navbar-nav">
+            <li style="width:30px;"><a href="" ng-click="openDialog()"><span class="glyphicon glyphicon-info-sign"></span></a></li>
+          </ul>
         </div>
         <div class="collapse navbar-collapse" id="navbar-brand-centred">
-          <ul class="nav navbar-nav">
-            <li><a href="" ng-click="openDialog()"><span class="glyphicon glyphicon-info-sign"></span></a></li>
-          </ul>
           <form class="navbar-form navbar-right" name="headerForm" role="search" ng-show="navbarThings" ng-submit="next()" ng-cloak>
             <div class="form-group" ng-class="{ 'has-error': headerForm.address.$invalid && headerForm.address.$dirty }" show-errors='{showSuccess: true}'>
               <label class="sr-only" for="address">Address</label>
