--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-default navbar-static-top" ng-controller="NavbarCtrl">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a role="button" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-brand-centred">
+          <a role="button" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-brand-centred" ng-show="navbarThings">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -58,6 +58,10 @@
     <div class="container-fluid">
       <div class="view-animate" ui-view></div>
     </div>
+    
+   	<noscript class="centre-content">
+		<h2>You must have JavaScript enabled to use DoctorPricer.</h2>
+	</noscript>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
