--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-default navbar-static-top" ng-controller="NavbarCtrl">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a role="button" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-brand-centred" ng-show="navbarThings">
+          <a role="button" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-brand-centred" ng-show="navbarThings" ng-cloak>
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
