--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
               <label class="sr-only" for="age">Age</label>
               <input name="age" min="0" type="text" class="form-control" ng-model="age" placeholder="Age" size="3" required></input>
             </div>
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-cool">
               <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search
             </button>
           </form>
@@ -62,7 +62,15 @@
    	<noscript class="centre-content">
 		<h2>You must have JavaScript enabled to use DoctorPricer.</h2>
 	</noscript>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+	  ga('create', 'UA-58125171-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -85,7 +93,6 @@
     <!-- endbuild -->
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=false"></script>
     
-
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/directives.js"></script>
