--- a/app/index.html
+++ b/app/index.html
@@ -48,9 +48,7 @@
               <label class="sr-only" for="age">Age</label>
               <input name="age" min="0" type="text" class="form-control" ng-model="age" placeholder="Age" size="3" required></input>
             </div>
-            <button type="submit" class="btn btn-cool">
-              <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search
-            </button>
+            <loading-button btnSize="btn-normal"></loading-button>
           </form>
         </div>
       </div>
