--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title ng-bind="title"></title>
-    <meta name="description" content="Compare the fees of practices in NZ.">
+    <meta name="description" content="Compare the fees of practices in NZ. Find the cheapest doctor for you and your family!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="styles/bootstrap.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <link rel="stylesheet" href="styles-conditional/autocomplete-{{autocompleteSize}}.css">
   </head>
   <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -67,8 +68,8 @@
     </div>
     
    	<noscript class="centre-content">
-		<h2>You must have JavaScript enabled to use DoctorPricer.</h2>
-	</noscript>
+		  <h2>You must have JavaScript enabled to use DoctorPricer.</h2>
+	 </noscript>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -96,7 +97,6 @@
     <!-- endbower -->
     <!-- endbuild -->
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=false"></script>
-    
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/directives.js"></script>
@@ -107,8 +107,8 @@
         <script src="scripts/services/practicescollection.js"></script>
         <script src="scripts/services/searchmodel.js"></script>
         <script src="scripts-thirdparty/Polyline.encoded.js"></script>
-        <script src="scripts-thirdparty/ui-bootstrap-custom-0.12.1.min.js"></script>
-        <script src="scripts-thirdparty/ui-bootstrap-custom-tpls-0.12.1.min.js"></script>
+        <script src="scripts-thirdparty/ui-bootstrap-custom-0.13.3.js"></script>
+        <script src="scripts-thirdparty/ui-bootstrap-custom-tpls-0.13.3.js"></script>
         <!-- endbuild -->
 </body>
 </html>
