Added report inaccuracy button, 60km

--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
     <script src="bower_components/ngDialog/js/ngDialog.js"></script>
     <script src="bower_components/angular-scroll/angular-scroll.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/fastclick/lib/fastclick.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=false"></script>
