--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
     <!--[if lte IE 9]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+
     <nav class="navbar navbar-default navbar-static-top" ng-controller="NavbarCtrl">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -44,7 +45,7 @@
           <a class="navbar-brand navbar-brand-centred" href="#/">DoctorPricer</a>
           <ul class="nav navbar-nav">
             <li style="width:30px;"><a href="" ng-click="openDialog()"><span class="glyphicon glyphicon-info-sign"></span></a></li>
-            <li><span class="fb-like" data-href="https://www.facebook.com/doctorpricer" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></span></li>
+
           </ul>
         </div>
         <div collapse="isCollapsed" class="collapse navbar-collapse" id="navbar-brand-centred">
@@ -62,10 +63,11 @@
         </div>
       </div>
     </nav>
+    <span ng-hide="hideFb" class="fb-like" data-href="https://www.facebook.com/doctorpricer" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></span>
     <div class="container-fluid">
       <div class="view-animate" ui-view></div>
     </div>
-    
+
    	<noscript class="centre-content">
 		  <h2>You must have JavaScript enabled to use DoctorPricer.</h2>
 	 </noscript>
@@ -98,6 +100,9 @@
     <!-- endbower -->
     <!-- endbuild -->
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts-thirdparty/Polyline.encoded.js"></script>
+        <script src="scripts-thirdparty/ui-bootstrap-custom-0.13.3.js"></script>
+        <script src="scripts-thirdparty/ui-bootstrap-custom-tpls-0.13.3.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/directives.js"></script>
         <script src="scripts/controllers/main.js"></script>
@@ -106,9 +111,6 @@
         <script src="scripts/controllers/map.js"></script>
         <script src="scripts/services/practicescollection.js"></script>
         <script src="scripts/services/searchmodel.js"></script>
-        <script src="scripts-thirdparty/Polyline.encoded.js"></script>
-        <script src="scripts-thirdparty/ui-bootstrap-custom-0.13.3.js"></script>
-        <script src="scripts-thirdparty/ui-bootstrap-custom-tpls-0.13.3.js"></script>
         <!-- endbuild -->
 
     <link rel="stylesheet" href="styles-conditional/autocomplete-{{autocompleteSize}}.css">
