--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" ng-app="doctorpricerWebApp">
   <head>
     <meta charset="utf-8">
-    <title ng-bind="title"></title>
+    <title ng-bind="title">DoctorPricer</title>
     <meta name="description" content="Compare the fees of practices in NZ. Find the cheapest doctor for you and your family!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
