--- a/app/index.html
+++ b/app/index.html
@@ -87,7 +87,7 @@
 	  ga('create', 'UA-58125171-1', 'auto');
 	  ga('send', 'pageview');
 	</script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&sensor=false"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places"></script>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/angular/angular.js"></script>
