Switch back to old URL and some minor SEO stuff

--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,8 @@
 <html class="no-js" ng-app="doctorpricerWebApp">
   <head>
     <meta charset="utf-8">
-    <title ng-bind="title">DoctorPricer</title>
-    <meta name="description" content="Don't pay more than you should for a doctors visit! Compare NZ doctor fees from over 900 practices across New Zealand with this free tool. ">
+    <title ng-bind="title">Doctor price comparison NZ | Find the cheapest doctor | DoctorPricer</title>
+    <meta name="description" content="Compare GP fees from over 800 practices across New Zealand with this free tool. Compare doctors near you and find the cheapest.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
