Replace ad with directive

--- a/app/index.html
+++ b/app/index.html
@@ -75,5 +75,6 @@
 	  ga('send', 'pageview');
 	</script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&key=AIzaSyBWidhaUt-lgKYVmqsjj1BYtoMq3eLr2a0"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> 
 </body>
 </html>
