Tweak ad sizing, add initial loading spinner

--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,12 @@
       <div class="view-animate" ui-view></div>
     </div>
 
+    <div class="container-fluid no-left-right-padding" ng-hide="loaded">
+      <div class="searching centre-content">
+        <h3><i class="fa fa-spinner fa-spin fa-lg"></i></h3>
+      </div>
+    </div>
+
    	<noscript class="centre-content">
 		  <h2>You must have JavaScript enabled to use DoctorPricer.</h2>
 	 </noscript>
