Make the search button in the header actually look like a search button

--- a/app/index.html
+++ b/app/index.html
@@ -35,9 +35,7 @@
         <div class="navbar-header" style="margin-left: -15px;">
           <a role="button" type="button" class="navbar-toggle collapsed" ng-click="isCollapsed = !isCollapsed" data-target="#navbar-brand-centred" ng-show="navbarThings" ng-cloak>
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
           </a>
           <a class="navbar-brand navbar-brand-centred" href="/">DoctorPricer</a>
           <ul class="nav navbar-nav">
