--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
           </a>
           <a class="navbar-brand navbar-brand-centred" href="/">DoctorPricer</a>
           <ul class="nav navbar-nav">
-            <li id="info-button" style="width:30px;" ng-cloak><a href="" ng-click="openDialog()"><span class="glyphicon glyphicon-info-sign"></span></a></li>
+            <li id="info-button" style="width:30px;" ng-class="{'hidden-xs': navbarThings}" ng-cloak><a href="" ng-click="openDialog()" ng-class="{'active': !isCollapsed}"><span class="glyphicon glyphicon-info-sign"></span></a></li>
           </ul>
         </div>
         <div uib-collapse="isCollapsed" class="collapse navbar-collapse" id="navbar-brand-centred">
