Put it into maintenance mode

--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
 
     <div class="container-fluid main-container">
 
-      <div class="view-animate" ui-view>
+      <!-- <div class="view-animate" ui-view>
         
         <loading-message></loading-message>
   
@@ -72,6 +72,11 @@
           </div>
         </div>
 
+      </div> -->
+
+      <div class="centre-container">
+        <h1>🚧🚧🚧👷👷👷😍😍😍</h1>
+        <h3>💁 DoctorPricer is unavailable right now, check back in a bit 💁</h3>
       </div>
 
       <noscript class="centre-container">
