--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,7 @@
 
     <div class="container-fluid main-container">
 
-      <!-- <div class="view-animate" ui-view>
+      <div class="view-animate" ui-view>
 
         <loading-message></loading-message>
 
@@ -99,12 +99,12 @@
           </div>
         </div>
 
-      </div> -->
+      </div>
 
-      <div class="centre-container">
+      <!-- <div class="centre-container">
         <h1>🚧🚧🚧👷👷👷😍😍😍</h1>
         <h3>💁 DoctorPricer is undergoing some changes, check back in a bit 💁</h3>
-      </div>
+      </div> -->
 
       <noscript class="centre-container">
         <div class="centre-content">
