Support serverside sorting of practices, add ability to filter out non-enrolling practices, tweaks to how things are displayed

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title ng-bind="title">Doctor price comparison NZ | Find the cheapest doctor | DoctorPricer</title>
-    <meta name="description" content="Compare GP fees from over 800 practices across New Zealand with this free tool. Compare doctors near you and find the cheapest price. Don't pay more than you need to for a doctors visit!">
+    <meta name="description" content="Compare GP fees from 1000+ practices across New Zealand with this free easy-to-use tool. Compare doctors near you and find the cheapest price. Don't pay more than you need to for a doctors visit! Find a GP which meets your budget.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <base href="/">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
