--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title ng-bind="title">Doctor price comparison NZ | Find the cheapest doctor | DoctorPricer</title>
-    <meta name="description" content="Compare GP fees from 1000+ practices across New Zealand with this free easy-to-use tool. Compare doctors near you and find the cheapest price. Don't pay more than you need to for a doctors visit! Find a GP which meets your budget.">
+    <meta ng-prop-content ="metadescription" name="description" content="Compare GP fees from 1000+ practices across New Zealand with this free easy-to-use tool. Compare doctors near you and find the cheapest price. Don't pay more than you need to for a doctors visit! Find a GP which meets your budget.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <base href="/">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -35,6 +35,7 @@
         <div class="navbar-header" style="margin-left: -15px; height: 50px; display: flex; float: none;">
           <ul class="nav navbar-nav">
             <li id="info-button" style="width:30px;" ng-class="{'hidden-xs': navbarThings}" ng-cloak><a href="" ng-mousedown="openDialog()" ng-class="{'active': !isCollapsed}"><span class="glyphicon glyphicon-info-sign"></span></a></li>
+            <li class="hidden-xs" ng-cloak><a target="_blank" href="https://data.doctorpricer.co.nz"><small>Stats for nerds</small></a></li>
           </ul>
           <a class="navbar-brand navbar-brand-centred" href="/">DoctorPricer</a>
           <a role="button" type="button" class="btn btn-default" ng-mousedown="isCollapsed = !isCollapsed" data-target="#navbar-brand-centred" ng-show="navbarThings" ng-cloak style="margin-left: auto; margin-top: 8px; margin-bottom: 8px; margin-right: 15px; margin-right: 8px">
