better goodbye message

--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title ng-bind="title">Doctor price comparison NZ | Find the cheapest doctor | DoctorPricer</title>
-  <meta ng-prop-content="metadescription" name="description"
-    content="Unfortunately DoctorPricer can no longer exist.">
+  <meta ng-prop-content="metadescription" name="description" content="Unfortunately DoctorPricer can no longer exist.">
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <base href="/">
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
   <style>
     @font-face {
       font-family: 'Glyphicons Halflings';
@@ -803,7 +802,7 @@
   <!--[if lte IE 11]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
+  <!-- 
   <nav class="navbar navbar-default navbar-static-top" ng-controller="NavbarCtrl">
     <div class="container-fluid">
       <div class="navbar-header" style="margin-left: -15px; height: 50px; display: flex; float: none;">
@@ -872,22 +871,22 @@
         </div>
       </div>
 
-    </div>
+    </div> -->
 
-    <!-- <div class="centre-container">
+  <!-- <div class="centre-container">
         <h1>🚧🚧🚧👷👷👷😍😍😍</h1>
         <h3>💁 DoctorPricer is undergoing some changes, check back in a bit 💁</h3>
       </div> -->
 
-    <noscript class="centre-container">
+  <!-- <noscript class="centre-container">
       <div class="centre-content">
         <h2>You must have JavaScript enabled to use DoctorPricer.</h2>
       </div>
     </noscript>
 
-  </div>
+  </div> -->
 
-  <script>
+  <!-- <script>
     (function (i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
         (i[r].q = i[r].q || []).push(arguments)
@@ -900,7 +899,41 @@
   </script>
 
   <script type="text/javascript"
-    src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&key=AIzaSyBWidhaUt-lgKYVmqsjj1BYtoMq3eLr2a0"></script>
+    src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places&key=AIzaSyBWidhaUt-lgKYVmqsjj1BYtoMq3eLr2a0"></script> -->
+
+  <div class="goodbye">
+    <h1>DoctorPricer can no longer exist</h1>
+    <p>Hi. I have been the sole maintainer of DoctorPricer since I started it a decade ago.</p>
+    <p>During this period, I did my best to keep things up to date in my spare time, working independently of any
+      government organisation and against a dysfunctional underfunded health system which positions primary care
+      operators as competitors.
+    <p>Unfortunately it's become increasingly clear that this is no longer tenable and the amount of work required to
+      ensure fees are up to date is more than I can manage.</p>
+    <p><strong>Rather than mislead people with possibly incorrect information, I've decided to take it down.</strong>
+    </p>
+    <p>I hope it's been useful to people. I've never made money (the single ad barely covered hosting costs) but that's
+      not what it was about. Not everything we do has to be in pursuit of profit and I implore anyone with skills and
+      time to make something useful for the community.</p>
+    <p><strong>If you work at or around Te Whatu Ora and would like to support me by supplying regular up to date fee
+        data,
+        please let me know at <a href="mailto:doctorpricernz@gmail.com.">doctorpricernz@gmail.com</a>.</strong>
+    </p>
+    <p> It's a
+      useful service and I'd love to bring it back.</p>
+  </div>
+  </div>
+
+  <style>
+    .goodbye {
+      padding: 10px;
+      max-width: 640px;
+      margin: 0 auto;
+    }
+
+    .goodbye p {
+      font-size: 18px;
+    }
+  </style>
 
 </body>
 
