something font related

--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,6 @@
   <base href="/">
   <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
   <style>
-    @font-face {
-      font-family: 'Glyphicons Halflings';
-      src: url('./fonts/glyphicons-halflings-regular.eot');
-      src: url('./fonts/glyphicons-halflings-regular.eot?#iefix')format('embedded-opentype'), url('./fonts/glyphicons-halflings-regular.woff2')format('woff2'), url('./fonts/glyphicons-halflings-regular.woff')format('woff'), url('./fonts/glyphicons-halflings-regular.ttf')format('truetype'), url('./fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular')format('svg');
-    }
 
     .ng-hide:not(.ng-hide-animate) {
       display: none !important
@@ -746,7 +741,7 @@
       height: 100%;
       padding: 0;
       margin: 0;
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: Helvetica, Arial, sans-serif;
     }
 
     .centre-container {
